# screen-hop

./: .gitignore  AGENTS.md  README.md  browser_move.spec  build_installer.ps1  config.json  pyproject.toml  requirements.txt  screenhop.spec
.github/workflows/: release.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: qa_report.md  task-01-structure.txt  task-01-toml.txt  task-03-config-load.txt  task-03-config-save.txt  task-04-monitor-detect.txt  task-04-no-external.txt  task-05-browser-path.txt  task-06-icon.txt  task-07-launch-kiosk.txt  task-07-launch-normal.txt  task-08-find-window.txt  task-08-timeout.txt  task-09-move-window.txt  task-12-add-preset.txt  task-14-status.txt  task-16-desktop.txt  task-16-startup.txt  task-17-single-instance.txt  task-18-cli-run.txt  task-18-no-monitor-error.txt  task-19-build.txt  task-20-readme.txt
.sisyphus/notepads/window-move-automation/: issues.md  learnings.md
.sisyphus/plans/: window-move-automation.md
docs/: get_external_monitor.ps1  run.bat
installer/: browser_move_win7.iss  screenhop_win7.iss
src/browser_move/: __init__.py  __main__.py  app.py  browsers.py  config.py  dpi.py  launcher.py  main.py  monitors.py  preset_form.py  preset_runner.py  preset_templates.py  settings_window.py  shortcuts.py  single_instance.py  status_bar.py  tray.py  ui_theme.py  window_mover.py
tests/: test_config.py  test_launcher_and_windows.py  test_monitors.py  test_preset_execution.py  test_preset_templates.py
