[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screen-hop"
version = "1.0.0"
description = "ScreenHop browser display automation for external monitors"
requires-python = ">=3.8,<3.9"
dependencies = []

[project.scripts]
screenhop = "browser_move.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
